--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ colorama==0.4.6
 fastapi==0.103.2
 h11==0.14.0
 idna==3.4
-numpy==1.26.0
-pandas==2.1.1
+numpy
+pandas
 pydantic==2.4.2
 pydantic_core==2.10.1
 python-dateutil==2.8.2
