--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,60 @@
 annotated-types==0.5.0
 anyio==3.7.1
+cachetools==5.3.1
+certifi==2023.5.7
+charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+contourpy==1.1.0
+cycler==0.11.0
+distlib==0.3.6
 fastapi==0.103.2
+filelock==3.12.2
+fonttools==4.41.0
+google-api-core==2.11.1
+google-api-python-client==2.95.0
+google-auth==2.22.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+googleapis-common-protos==1.59.1
+greenlet==2.0.2
 h11==0.14.0
+httplib2==0.22.0
 idna==3.4
-numpy
-pandas
+kiwisolver==1.4.4
+matplotlib==3.7.2
+mysql-connector-python==8.1.0
+numpy==1.25.1
+oauthlib==3.2.2
+packaging==23.1
+panda==0.3.1
+pandas==2.0.3
+Pillow==10.0.0
+pipenv==2023.7.11
+platformdirs==3.8.1
+protobuf==4.21.12
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pydantic==2.4.2
 pydantic_core==2.10.1
+PyMySQL==1.1.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2023.3.post1
+pytz==2023.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.11.1
+seaborn==0.12.2
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.19
 starlette==0.27.0
-typing_extensions
+typing_extensions==4.7.1
 tzdata==2023.3
-uvicorn
+uritemplate==4.1.1
+urllib3==1.26.16
+uvicorn==0.23.2
+virtualenv==20.23.1
+virtualenv-clone==0.5.7
