--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2023.5.7
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
-contourpy==1.1.0
+contourpy
 cycler==0.11.0
 distlib==0.3.6
 fastapi==0.103.2
