--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ cycler==0.11.0
 distlib==0.3.6
 fastapi==0.103.2
 filelock==3.12.2
-fonttools==4.41.0
+fonttools
 google-api-core==2.11.1
 google-api-python-client==2.95.0
 google-auth==2.22.0
@@ -24,11 +24,11 @@ idna==3.4
 kiwisolver==1.4.4
 matplotlib==3.7.2
 mysql-connector-python==8.1.0
-numpy==1.25.1
+numpy
 oauthlib==3.2.2
 packaging==23.1
 panda==0.3.1
-pandas==2.0.3
+pandas
 Pillow==10.0.0
 pipenv==2023.7.11
 platformdirs==3.8.1
