--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ h11==0.14.0
 httplib2==0.22.0
 idna==3.4
 kiwisolver==1.4.4
-matplotlib==3.7.2
+matplotlib
 mysql-connector-python==8.1.0
 numpy
 oauthlib==3.2.2
