--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ httplib2==0.22.0
 idna==3.4
 kiwisolver==1.4.4
 matplotlib
-mysql-connector-python==8.1.0
+mysql-connector-python
 numpy
 oauthlib==3.2.2
 packaging==23.1
