--- a/requirements.txt
+++ b/requirements.txt
@@ -29,11 +29,11 @@ oauthlib==3.2.2
 packaging==23.1
 panda==0.3.1
 pandas
-Pillow==10.0.0
+Pillow
 pipenv==2023.7.11
 platformdirs==3.8.1
 protobuf==4.21.12
-pyarrow==13.0.0
+pyarrow
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pydantic==2.4.2
