--- a/requirements.txt
+++ b/requirements.txt
@@ -45,8 +45,8 @@ pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
-scipy==1.11.1
-seaborn==0.12.2
+scipy
+seaborn
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.19
