--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,24 @@
+annotated-types==0.5.0
+anyio==3.7.1
+click==8.1.7
+colorama==0.4.6
 fastapi==0.103.2
-uvicorn
-pandas
-scikit-learn==0.24.2
+h11==0.14.0
+idna==3.4
+joblib==1.3.2
 numpy
+pandas
+pydantic==2.4.2
+pydantic_core==2.10.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+scikit-learn==1.3.1
+scipy
+six==1.16.0
+sklearn==0.0.post9
+sniffio==1.3.0
+starlette==0.27.0
+threadpoolctl==3.2.0
+typing_extensions==4.8.0
+tzdata==2023.3
+uvicorn
