--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pydantic==2.4.2
 pydantic_core==2.10.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
-scikit-learn==1.3.1
+scikit-learn
 scipy
 six==1.16.0
 sklearn==0.0.post9
