--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ six==1.16.0
 sklearn==0.0.post9
 sniffio==1.3.0
 starlette==0.27.0
-threadpoolctl==3.2.0
+threadpoolctl
 typing_extensions==4.8.0
 tzdata==2023.3
 uvicorn
