--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,6 @@ sklearn==0.0.post9
 sniffio==1.3.0
 starlette==0.27.0
 threadpoolctl
-typing_extensions==4.8.0
+typing_extensions
 tzdata==2023.3
 uvicorn
