--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,10 @@ pytz==2023.3.post1
 scikit-learn
 scipy
 six==1.16.0
-sklearn==0.0.post9
+
 sniffio==1.3.0
 starlette==0.27.0
 threadpoolctl
-typing_extensions==4.8.0
+typing_extensions
 tzdata==2023.3
 uvicorn
